# GRayV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.h  Renderer.h  Shader.h
shader/: screenQuad.frag  screenQuad.vert
src/: Camera.cpp  Renderer.cpp  Shader.cpp  main.cpp
